@@ -16,7 +16,19 @@ https://www.researchgate.net/publication/235006781_Ejercicios_de_programacion_cr
 
 http://www.eduinnova.es/monografias2011/ene2011/java.pdf  
 
-https://mthtics.blogspot.com/2013/10/un-fin-de-semana-para-ordenar-los-libros.html  
+https://mthtics.blogspot.com/2013/10/un-fin-de-semana-para-ordenar-los-libros.html 
+
+
+C:\Program Files\NetBeans 8.0.1\etc
+(NetBeans 8.0.1 o la versión que tengas instalada)
+
+
+
+netbeans_default_options="-J-Duser.language=es -J-client -J-Xss2m -J-Xms32m -J-XX:PermSize=32m -J-Dapple.laf.useScreenMenuBar=true -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.dpiaware=true -J-Dsun.zip.disableMemoryMapping=true"
+
+
+
+-J-Duser.language=en
 
 
 
